--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/logo512.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
@@ -58,26 +59,26 @@
     <section class="about" id="about">
         <div class="container">
             <div class="profile-img" data-aos="fade-right" data-aos-delay="300" data-aos-once="true">
-                <img src="./assets/profile.jpeg" alt="Profile image">
+                <img src="./assets/giovane305.jpg" alt="Profile image">
             </div>
             <div class="about-details" data-aos="fade-left" data-aos-delay="600" data-aos-once="true">
                 <div class="about-heading">
                     <h1>Sobre</h1>
                     <h6>Mim</h6>
                 </div>
-                <p>Sou uma pessoa que acredita que aprender algo novo a cada dia já é o suficiente para trazer grande valor para minha vida pessoal e profissional, que ensinar o que já aprendi poderá tranzer algo semelhante ao próximo. <br>Ter a habilidade
-                    de desenvolver algo programando e assim facilitar o modo como interagimos com o mundo virtual é algo muito poderoso e isso é o que de dá mais prazer e motivação em continuar progredindo cada vez mais!
+                <p>Olá me chamo Giovane, sou uma pessoa que preza pelo conhecimento e pelo valor que dele pode ser gerado de modo a impactar positivamente as pessoas. Isso é o que realmente me motiva a querer aprender algo novo a cada dia, criar novas soluções
+                    e invovações para facilitar o modo como interagimos com o mundo virtual e sendo um Dev, é um privilégio poder fazer parte isso.
                 </p>
                 <span>
-                        <a href="#" class="icon-link">
-                            <i class="fab fa-linkedin"></i>
-                        </a> 
-                        <a href="#" class="icon-link">
-                            <i class="fab fa-github"></i>
-                        </a> 
-                       <a href="#" class="icon-link">
+                    <a  class="icon-link" href="https://linkedin.com/in/giovane-pereira" target="_blank" rel="noopener noreferrer">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a  class="icon-link" href="https://github.com/gpereira305" target="_blank" rel="noopener noreferrer">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a  class="icon-link" href="https://api.whatsapp.com/send?phone=5531996997780" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-whatsapp"></i>
-                       </a>
+                    </a> 
                 </span>
             </div>
         </div>
