--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h1>Giovane Pereira</h1>
             <h6>Front-end Developer</h6>
             <button class="resume">
-                <a href="https://drive.google.com/file/d/1MYW6_g40u8PjQrI6VzZhlfUHy1-K_jKc/view?usp=sharing" target="_blank">
+                <a href="https://drive.google.com/file/d/1pSs8wzFAfuKYEqCr7Ij1XUq39oMM9ILJ/view?usp=sharing" target="_blank">
                     Baixar CV
                   </a>
                 <i class="fas fa-cloud-download-alt"></i> 
@@ -66,8 +66,8 @@
                     <h1>Sobre</h1>
                     <h6>Mim</h6>
                 </div>
-                <p>Olá me chamo Giovane, sou uma pessoa que preza pelo conhecimento e pelo valor que dele pode ser gerado de modo a impactar positivamente as pessoas. Isso é o que realmente me motiva a querer aprender algo novo a cada dia, criar novas soluções
-                    e invovações para facilitar o modo como interagimos com o mundo virtual e sendo um Dev, é um privilégio poder fazer parte isso.
+                <p>Olá me chamo Giovane, sou desenvolvedor frontend e acredito que como responsabilidade principal está sempre pronto para solucionar problemas, implementar inovações, facilidades e melhor aproximação na interatividade do usuário com sistemas
+                    que torna nosso dia a dia mais produtivo, dinâmico e prazeroso.
                 </p>
                 <span>
                     <a  class="icon-link" href="https://linkedin.com/in/giovane-pereira" target="_blank" rel="noopener noreferrer">
