added new project

--- a/index.html
+++ b/index.html
@@ -188,6 +188,37 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Portfolio project-4 -->
+            <div class="portfolio-item reverse">
+                <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="900" data-aos-once="true">
+                    <h1>Landing Page Real Estate</h1>
+                    <div class="project-stack">
+                        <span>HTML5</span>
+                        <span>CSS3</span>
+                        <span>jQuery</span>
+                    </div>
+                    <p>Na construção dessa landing page usei majoritariamente o Grid Layout do CSS, explorando todo o que essa ferramenta fantástica pode oferecer para obter um projeto bem estruturado, responsivo e com harmonização sem a utilização de um
+                        framework. Fiz um upgrade adicionando um modal com formulário, menu lateral e navegação entre seções para melhor experiência do usuário.
+                    </p>
+                    <div class="cta">
+                        <a href="https://github.com/gpereira305/Landing-page-Imobiliaria" target="_blank" rel="noopener noreferrer">
+                            <span>
+                            <i class="fas fa-file-code"></i> Código fonte
+                            </span>
+                        </a>
+                        <a href="https://gpereira305.github.io/Landing-page-Imobiliaria" target="_blank" rel="noopener noreferrer">
+                            <span>
+                                <i class="fas fa-link"></i>
+                                Ver online
+                            </span>
+                        </a>
+                    </div>
+                </div>
+                <div class="portfolio-img" data-aos="fade-left" data-aos-delay="600" data-aos-once="true">
+                    <img src="./assets/project-2.png" alt="Project image">
+                </div>
+            </div>
         </div>
     </section>
 
